applied 256 colors patch

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ DATE = 2016-01-23
 VERSION = 9.22
 RXVTNAME = urxvt
 SHELL = /bin/sh
-prefix = /usr/local
+prefix = /home/fthevissen/software/local
 exec_prefix = ${prefix}
 bindir = ${exec_prefix}/bin
 libdir = ${exec_prefix}/lib
@@ -17,12 +17,12 @@ INSTALL = /usr/bin/install -c
 INSTALL_PROGRAM = /usr/bin/install -c -m 755
 INSTALL_DATA = /usr/bin/install -c -m 644
 CXXFLAGS = -g -O3 -fno-rtti -fvisibility-inlines-hidden -fno-threadsafe-statics -fno-enforce-eh-specs -w
-CPPFLAGS =    -I/usr/include/freetype2
+CPPFLAGS =   
 LDFLAGS = 
 DEFS = -DHAVE_CONFIG_H
 LIBS =  -lsupc++ -lm
-XINC =  -pthread -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/libpng12 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include 
-XLIB = -lfontconfig -lfreetype -lXft -lXrender -lX11 -lXmu -lXt -lX11  -lX11  -lgdk_pixbuf-2.0 -lgobject-2.0 -lglib-2.0 
+XINC =   
+XLIB = -lXrender -lX11 -lXmu -lXt -lX11  -lX11   
 COMPILE = $(CXX) -I.. -I$(srcdir) -I. -I$(srcdir)/../libev -I$(srcdir)/../libptytty/src $(DEFS) $(CPPFLAGS) $(CXXFLAGS) $(XINC)
 LINK = gcc $(LDFLAGS)
 EXEEXT = 
